DevOps/k8s/Mongo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: mongo-cluster
spec: {}
status: {}
