DevOps/k8s/Mongo/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: kube-system
spec:
  type: ExternalName
  externalName: mongo.default.svc.cluster.local
