DevOps/k8s/Mongo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongo-cluster
  #annotations:
  # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mongo.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-svc
            port:
              number: 27017
